--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/upstash-redis-adapter": "^3.0.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@upstash/redis": "^1.34.8",
     "class-variance-authority": "^0.7.1",
