--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
