--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.501.0",
+    "nanoid": "^5.1.5",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.0",
     "react-hot-toast": "^2.5.2",
+    "react-textarea-autosize": "^8.5.9",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.3"
   },
