--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "encoding": "^0.1.13",
     "lucide-react": "^0.501.0",
     "nanoid": "^5.1.5",
     "next": "15.3.1",
@@ -27,6 +28,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.0",
     "react-hot-toast": "^2.5.2",
+    "react-loading-skeleton": "^3.5.0",
     "react-textarea-autosize": "^8.5.9",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.24.3"
