--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@hookform/resolvers": "^5.0.1",
     "@next-auth/upstash-redis-adapter": "^3.0.4",
     "@radix-ui/react-slot": "^1.2.0",
